# idlescape

./: .gitignore  .pre-commit-config.yaml  README.md  activities.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml  continuous-deployment.yml
idlemax/: character.py  cli.py  experience_to_level.py  game.py  game_data.py
idlescape/: character.py  cli.py  data.py  experience_to_level.py  game.py  game_data.py
idlescape/data/: activity_actions.json  activity_option_item_costs.json  activity_options.json  items.json
tests/: test_cli.py  test_game.py  test_idlescape.py
