[project]
name = "idlescape"
version = "0.1"
description = "An idle game, definitely not inspired by Runescape"
readme = "README.md"
authors = [{ name = "Ben Walzer" }]
license = "Apache-2.0"
requires-python = ">=3.13"
classifiers = []
dependencies = ["click", "pendulum>=3.0.0", "sqlalchemy>=2.0.41"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pre-commit>=4.2.0", "pytest>=8.3.5"]

[project.scripts]
idlescape = "idlescape.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
